src/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: iot-monitoring
spec:
  replicas: 1
  selector:
    matchLabels: { app: dashboard }
  template:
    metadata:
      labels: { app: dashboard }
    spec:
      containers:
        - name: frontend
          image: ilyasselm/iot-web-app:latest
          command: ["sh", "-c", "npm run dev:frontend"]
          ports:
            - containerPort: 5173
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { cpu: 250m, memory: 256Mi }

        - name: backend
          image: ilyasselm/iot-web-app:latest
          command: ["sh", "-c", "npm run dev:backend"]
          ports:
            - containerPort: 3001
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { cpu: 250m, memory: 256Mi }
